--- a/drivers/input/touchscreen/Makefile
+++ b/drivers/input/touchscreen/Makefile
@@ -104,3 +104,4 @@ obj-y	+= lct_tp_fm_info.o
 obj-y	+= lct_ctp_selftest.o
 obj-y	+= lct_ctp_upgrade.o
 obj-y	+= lct_if_ctp_upgrade.o
+obj-$(CONFIG_WAKE_GESTURES)		+= wake_gestures.o
